# POPL2023

./: .gitmodules  LICENSE  README.md  hefty-algebras.agda-lib
.github/workflows/: static.yml
docs/: All.html  Example.Free.Choice%2BState.html  Free.Disj.html  Free.Nil.html  Free.Out.html  Hefty.Catch.html  README.html
haskell/: hefty-algebras.cabal
haskell/app/: Main.hs
haskell/src/: Elab.hs  Free.hs  Hefty.hs
haskell/src/Examples/: LambdaState.hs  StateCatch.hs  YieldOut.hs
haskell/src/Free/: Abort.hs  NonDet.hs  Out.hs  State.hs  SubJump.hs  Yield.hs
haskell/src/Hefty/: Except.hs  Lambda.hs
html/: Example.Free.State.html  Example.Hefty.Catch%2BThrow%2BState.html  Example.Hefty.Censor%2BOutput.html  Example.Hefty.Choice%2BOnce.html  Example.Hefty.Disj%2BOnce.html  Example.Hefty.Lambda%2BState.html  Example.Hefty.Out%2BConcur.html  Example.Hefty.Output%2BConcur.html  Free.Choice.html  Free.Interleave.html  Free.Output.html  Free.State.html  Free.SubJump.html  Free.Throw.html  Free.html  Hefty.Censor.html  Hefty.Concur.html  Hefty.Lambda.html  Hefty.Lift.html  Hefty.Nil.html  Hefty.Once.html  Hefty.html  Index.html  Law.Hefty.Catch.html  Postulate.Extensionality.html  index.html
src/: All.agda  Free.agda  Hefty.agda  Index.agda  README.agda  index.agda
src/Example/Free/: Choice+State.agda  State.agda
src/Example/Hefty/: Catch+Throw+State.agda  Censor+Output.agda  Choice+Once.agda  Disj+Once.agda  Lambda+State.agda  Out+Concur.agda  Output+Concur.agda
src/Free/: Choice.agda  Disj.agda  Interleave.agda  Logic.agda  Nil.agda  Out.agda  Output.agda  State.agda  SubJump.agda  Throw.agda
src/Hefty/: Catch.agda  Censor.agda  Concur.agda  Lambda.agda  Lift.agda  Nil.agda  Once.agda
src/Law/Hefty/: Catch.agda
src/Postulate/: Extensionality.agda
